--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,6 +29,8 @@ jobs:
         shell: bash
         run: |
           make test
+        env:
+          KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
       - name: lint
         shell: bash
         run: |
@@ -51,6 +53,8 @@ jobs:
         shell: bash
         run: |
           make cover
+        env:
+          KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
