--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Run generate
         shell: bash
         run: |
-          make generate
+          export PATH=${PATH}:`go env GOPATH`/bin
+          make all
 
       - name: Check for modified files
         id: git-check
