--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           export PATH=${PATH}:`go env GOPATH`/bin
           make all
+        env:
+          KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
 
       - name: Check for modified files
         id: git-check
