--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -7,6 +7,7 @@ on:
       - 'Makefile'
       - .github/workflows/generate.yml
       - spec.json
+      - 'generate/**.go'
   workflow_dispatch:
     inputs:
 jobs:
@@ -40,5 +41,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git fetch origin
-          git commit -am "I have generated the latest API!"
-          git push origin ${{github.event.pull_request.head.ref }}
+          git commit -am "I have generated the latest API!" || true
+          git push origin ${{github.event.pull_request.head.ref }} || true
