--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -37,19 +37,19 @@ jobs:
       # Checkout the docs repo since we will want to update the files there.
       - uses: actions/checkout@v3
         with:
-          repository: 'kittycad/docs'
-          path: 'docs'
+          repository: 'kittycad/kittycad.py'
+          path: 'kittycad.py'
           token: ${{secrets.PAT_GITHUB}}
       - name: move spec to docs
         shell: bash
         run: |
-          rm docs/spec.json || true
-          cp spec.json docs/spec.json
-      - name: commit the changes in the docs repo
+          rm kittycad.py/spec.json || true
+          cp spec.json kittycad.py/spec.json
+      - name: commit the changes in the kittycad.py repo
         shell: bash
         run: |
           export VERSION=$(cat VERSION.txt);
-          cd docs
+          cd kittycad.py
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
