--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -37,19 +37,19 @@ jobs:
       # Checkout the docs repo since we will want to update the files there.
       - uses: actions/checkout@v3
         with:
-          repository: 'kittycad/kittycad.py'
-          path: 'kittycad.py'
+          repository: 'kittycad/kittycad.rs'
+          path: 'kittycad.rs'
           token: ${{secrets.PAT_GITHUB}}
       - name: move spec to docs
         shell: bash
         run: |
-          rm kittycad.py/spec.json || true
-          cp spec.json kittycad.py/spec.json
-      - name: commit the changes in the kittycad.py repo
+          rm kittycad.rs/spec.json || true
+          cp spec.json kittycad.rs/spec.json
+      - name: commit the changes in the kittycad.rs repo
         shell: bash
         run: |
           export VERSION=$(cat VERSION.txt);
-          cd kittycad.py
+          cd kittycad.rs
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
