--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -37,26 +37,26 @@ jobs:
       # Checkout the docs repo since we will want to update the files there.
       - uses: actions/checkout@v3
         with:
-          repository: 'kittycad/kittycad.py'
-          path: 'kittycad.py'
+          repository: 'kittycad/website'
+          path: 'website'
           token: ${{secrets.PAT_GITHUB}}
       - name: move spec to docs
         shell: bash
         run: |
-          rm kittycad.py/spec.json || true
-          cp spec.json kittycad.py/spec.json
-      - name: commit the changes in the kittycad.py repo
+          rm website/kittycad.go.patch.json || true
+          cp kittycad.go.patch.json website/kittycad.go.patch.json
+      - name: commit the changes in the website repo
         shell: bash
         run: |
           export VERSION=$(cat VERSION.txt);
-          cd kittycad.py
+          cd website
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
           git commit -am "YOYO NEW GO SPEC DOCS ${VERSION}!" || exit 0
           git fetch origin
           git rebase origin/main || exit 0
-          export NEW_BRANCH="update-spec-${VERSION}"
+          export NEW_BRANCH="update-spec-go"
           git checkout -b "$NEW_BRANCH"
           git push -f origin "$NEW_BRANCH"
           gh pr create --title "Update go lang spec docs for ${VERSION}" \
