--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -8,6 +8,7 @@ on:
       - .github/workflows/generate.yml
       - spec.json
       - 'generate/**.go'
+      - VERSION.txt
   workflow_dispatch:
     inputs:
 jobs:
