--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Ensure no files changed
         shell: bash
         run: |
+          git checkout examples_test.go
           if [[ `git status --porcelain` ]]; then
             echo "Files changed, exiting";
             exit 1;
