--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -15,6 +15,13 @@ jobs:
     name: update-spec
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          # required
+          app-id: ${{ secrets.GH_ORG_APP_ID }}
+          private-key: ${{ secrets.GH_ORG_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
@@ -40,7 +47,7 @@ jobs:
         with:
           repository: 'kittycad/website'
           path: 'website'
-          token: ${{secrets.PAT_GITHUB}}
+          token: ${{ steps.app-token.outputs.token }}
       - name: move spec to docs
         shell: bash
         run: |
@@ -65,6 +72,6 @@ jobs:
               --head "$NEW_BRANCH" \
               --base main || true
         env:
-          GITHUB_TOKEN: ${{secrets.PAT_GITHUB}}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
 
