--- a/.github/workflows/update-spec-for-docs.yml
+++ b/.github/workflows/update-spec-for-docs.yml
@@ -70,9 +70,9 @@ jobs:
           gh pr create --title "Update go lang spec docs for ${VERSION}" \
               --body "Updating the generated docs for go lang" \
               --head "$NEW_BRANCH" \
-              --assignee jessfraz \
-              --assignee irevdev \
-              --assignee franknoirot \
+              --reviewer jessfraz \
+              --reviewer irevdev \
+              --reviewer franknoirot \
               --base main || true
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
