--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run generate
         shell: bash
         run: |
+          go get golang.org/x/tools/cmd/goimports
           make all
         env:
           KITTYCAD_API_TOKEN: ${{secrets.KITTYCAD_API_TOKEN}}
